RESOLVED FIXED 258124
[GStreamer][WebRTC] Incoming track ID doesn't match sender track ID
https://bugs.webkit.org/show_bug.cgi?id=258124
Summary [GStreamer][WebRTC] Incoming track ID doesn't match sender track ID
Philippe Normand
Reported 2023-06-15 05:32:46 PDT
webrtc/utf8-sdp.html
Attachments
Philippe Normand
Comment 1 2023-06-15 05:39:03 PDT
EWS
Comment 2 2023-06-16 07:00:17 PDT
Committed 265244@main (5a644c417314): <https://commits.webkit.org/265244@main> Reviewed commits have been landed. Closing PR #15002 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-06-16 07:01:16 PDT
Note You need to log in before you can comment on or make changes to this bug.